fix horizontal scrolling when profile name is long on tablet resolutions

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,7 @@
   font-size: 32px;
   line-height: 1;
   font-weight: 500;
+  word-break: break-word;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -36,6 +37,7 @@
   font-weight: 500;
   line-height: 1;
   opacity: 0.7;
+  word-break: break-word;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
